--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,67 @@
 {
   "name": "nrel/thesource_bootstrap",
-  "description": "Built to use Bootstrap, a sleek, intuitive, and powerful front-end framework for faster and easier web development.",
+  "description": "theSource branded theme for Bootstrap.",
   "type": "drupal-theme",
   "license": "GPL-2.0",
-  "homepage": "https://www.drupal.org/project/bootstrap",
-    "authors": [
-        {
-            "name": "Damon Haley (dhaley)",
-            "email": "damon.haley@nrel.gov",
-            "role": "Maintainer"
-        },
-        {
-            "name": "Shaun Laws (slaws)",
-            "email": "shaun.laws@nrel.gov",
-            "role": "Co-maintainer"
-        }
-    ],
+  "prefer-stable": true,
+  "minimum-stability": "dev",
+  "homepage": "https://github.com/NREL/thesource_bootstrap",
+  "authors": [
+    {
+      "name": "Shaun Laws (slaws)",
+      "email": "shaun.laws@nrel.gov",
+      "role": "Co-maintainer"
+    },
+    {
+      "name": "Christian Modern (cmodern)",
+      "email": "christian.modern@nrel.gov",
+      "role": "Co-maintainer"
+    }
+  ],
   "support": {
       "issues": "https://github.com/NREL/thesource_bootstrap/issues"
+  },
+  "extra": {
+    "installer-paths": {
+      "build/core": ["type:drupal-core"],
+      "build/modules/contrib/{$name}": ["type:drupal-module"],
+      "build/profiles/contrib/{$name}": ["type:drupal-profile"],
+      "build/themes/contrib/{$name}": ["type:drupal-theme"]
+    }
+  },
+  "require": {
+    "drupal/bootstrap_layouts": "^5.1",
+    "drupal/bootstrap_barrio": "~5.5.2"
+  },
+  "require-dev": {
+    "drupal/console": "~1",
+    "drush/drush": "*",
+    "drupal/core": "~8"
+  },
+  "repositories": {
+    "drupal": {
+      "type": "composer",
+      "url": "https://packages.drupal.org/8"
+    },
+    "assets" : {
+      "type": "composer",
+      "url": "https://asset-packagist.nrel.gov/nrel/drupal8/",
+      "options" : {
+        "ssl" : {
+          "verify_peer": false,
+          "allow_self_signed": true
+        }
+      }
+    }
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "mkdir -p ../../../../docroot/libraries/bootstrap",
+      "cp -R ../../../../vendor/twbs/bootstrap/dist ../../../../docroot/libraries/bootstrap"
+    ],
+    "post-update-cmd": [
+      "mkdir -p ../../../../docroot/libraries/bootstrap",
+      "cp -R ../../../../vendor/twbs/bootstrap/dist ../../../../docroot/libraries/bootstrap"
+    ]
   }
 }
