--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
   },
   "require": {
     "drupal/bootstrap_layouts": "^5.1",
-    "drupal/bootstrap_barrio": "~5.5.2"
+    "drupal/bootstrap_barrio": "dev-3391450-incorrect-path-to"
   },
   "require-dev": {
     "drupal/console": "~1",
@@ -39,6 +39,10 @@
     "drupal/core": "^9.4.15"
   },
   "repositories": {
+    "bootstrap_barrio": {
+      "type": "vcs",
+      "url": "https://git.drupalcode.org/issue/bootstrap_barrio-3391450"
+    },
     "drupal": {
       "type": "composer",
       "url": "https://packages.drupal.org/8"
