--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
     },
     "assets" : {
       "type": "composer",
-      "url": "https://asset-packagist.nrel.gov/nrel/drupal8/",
+      "url": "https://packagist-repo.nrel.gov/nrel/communications/",
       "options" : {
         "ssl" : {
           "verify_peer": false,
